# My-first-FastAPI-app

./: .gitignore  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 52b0f3124a12_init_notes_table.py
api/v1/: router.py
api/v1/endpoints/: notes.py
core/: config.py  dependencies.py
db/: session.py
schemas/: note.py
services/: note_service.py
